--- a/Todo list using React, TailwindCss/package.json
+++ b/Todo list using React, TailwindCss/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
